kubernetes/apps/observability/tempo/app/ingress-otlp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-otlp
  namespace: observability
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: tempo.techvomit.xyz
      http:
        paths:
          - path: /v1/traces
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 4318
  tls:
    - hosts:
        - tempo.techvomit.xyz
